--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "my-node-fp",
-  "version": "0.7.0",
+  "version": "0.8.1",
   "description": "Simple node programming utility",
   "scripts": {
     "script": "cross-env NODE_ENV=production TS_NODE_PROJECT=tsconfig.json ts-node -r tsconfig-paths/register",
     "lint": "eslint --quiet --ext ts,tsx ./src/*",
     "clean": "rimraf dist artifact",
-    "ctix": "ctix create -p tsconfig.json",
-    "ctix:clean": "ctix clean -p tsconfig.json -b",
-    "prepub:prod": "npm run ctix && npm run build",
+    "ctix": "ctix single -p tsconfig.json -o src -w",
+    "ctix:remove": "ctix remove -p tsconfig.json -b",
+    "prepub:prod": "npm run rollup:prod",
     "pub:prod": "npm publish --access=public",
-    "postpub:prod": "ctix clean -p tsconfig.json --includeBackup",
-    "build:tsc": "node_modules/.bin/tsc --noemit -p tsconfig.json",
-    "prebuild": "npm run clean && npm run ctix",
-    "build": "cross-env NODE_ENV=develop npx webpack --config webpack.config.prod.cjs",
-    "prebuild:dev": "npm run clean",
-    "build:dev": "cross-env NODE_ENV=develop npx webpack --config webpack.config.dev.cjs"
+    "postpub:prod": "npm run ctix:remove",
+    "build": "tsc --incremental --noemit -p tsconfig.json",
+    "prerollup:prod": "npm run clean && npm run ctix",
+    "rollup:prod": "cross-env NODE_ENV=develop rollup --config ./.configs/rollup.config.prod.ts  --configPlugin ts",
+    "prerollup:dev": "npm run clean && npm run ctix",
+    "rollup:dev": "cross-env NODE_ENV=develop rollup --config ./.configs/rollup.config.dev.ts  --configPlugin ts"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,9 @@
   },
   "author": "ByungJoon Lee <imjuni+github@gmail.com>",
   "license": "MIT",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "./dist/cjs/index.js",
+  "typings": "./dist/esm/index.d.ts",
+  "module": "./dist/esm/index.js",
   "files": [
     "dist"
   ],
@@ -33,37 +34,35 @@
   },
   "homepage": "https://github.com/imjuni/my-node-fp#readme",
   "devDependencies": {
-    "@tsconfig/node16": "^1.0.2",
-    "@types/node": "^17.0.23",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@tsconfig/node16": "^1.0.3",
+    "@types/node": "^18.7.14",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "cross-env": "^7.0.3",
-    "ctix": "^0.5.3",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-typescript": "^16.1.4",
+    "ctix": "^1.3.4",
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsdoc": "^38.1.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.6",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.6.1",
-    "prettier-eslint": "^13.0.0",
+    "prettier-eslint": "^15.0.1",
+    "read-pkg": "^5.2.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.4",
-    "ts-loader": "^9.2.8",
-    "ts-node": "^10.7.0",
-    "tsconfig-paths": "^3.14.1",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "tslint": "^6.1.3",
-    "typescript": "^4.6.3",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-node-externals": "^3.0.0",
-    "webpackbar": "^5.0.2"
+    "rollup": "^2.79.0",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-ts": "^3.0.2",
+    "ts-jest": "^28.0.8",
+    "ts-loader": "^9.3.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.8.2"
   },
   "dependencies": {
-    "my-easy-fp": "^0.11.0",
-    "tslib": "^2.3.1"
+    "my-easy-fp": "^0.14.0"
   }
 }
