--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
   "singleQuote": true,
   "trailingComma": "all",
-  "printWidth": 100,
+  "printWidth": 120,
   "arrowParens": "always",
   "parser": "typescript",
-  "endOfLine": "lf",
+  "plugins": ["prettier-plugin-organize-imports"],
   "overrides": [
     {
       "files": "*.md",
@@ -13,9 +13,33 @@
       }
     },
     {
-      "files": ".tjsclirc",
+      "files": ".ctirc",
       "options": {
-        "parser": "json5"
+        "parser": "json"
+      }
+    },
+    {
+      "files": ".eslintrc",
+      "options": {
+        "parser": "json"
+      }
+    },
+    {
+      "files": [
+        "tsconfig.json",
+        "tsconfig.*.json"
+      ],
+      "options": {
+        "parser": "json"
+      }
+    },
+    {
+      "files": [
+        ".vscode/launch.json",
+        ".vscode/settings.json"
+      ],
+      "options": {
+        "parser": "json"
       }
     }
   ]
