--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
   "name": "my-node-fp",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "Simple node programming utility",
   "scripts": {
+    "test": "vitest --run --coverage",
     "script": "cross-env NODE_ENV=production TS_NODE_PROJECT=tsconfig.json ts-node -r tsconfig-paths/register",
-    "lint": "eslint --quiet --ext ts,tsx ./src/*",
     "clean": "rimraf dist artifact",
-    "ctix": "ctix single -p tsconfig.json -o src -w",
-    "ctix:remove": "ctix remove -p tsconfig.json -b",
-    "prepub:prod": "npm run rollup:prod",
-    "pub:prod": "npm publish --access=public",
-    "postpub:prod": "npm run ctix:remove",
-    "build": "tsc --incremental --noemit -p tsconfig.json",
-    "prerollup:prod": "npm run clean && npm run ctix",
-    "rollup:prod": "cross-env NODE_ENV=develop rollup --config ./.configs/rollup.config.prod.ts  --configPlugin ts",
-    "prerollup:dev": "npm run clean && npm run ctix",
-    "rollup:dev": "cross-env NODE_ENV=develop rollup --config ./.configs/rollup.config.dev.ts  --configPlugin ts"
+    "ctix": "ctix build --config .configs/.ctirc",
+    "ctix-rm": "ctix remove --config .configs/.ctirc --force-yes --remove-backup",
+    "dts": "tsc -p tsconfig.dts.json",
+    "dts-alias": "tsc-alias -p tsconfig.dts.json",
+    "dts-gen": "rollup --config ./.configs/rollup.config.mjs",
+    "dts-pack": "run-s dts dts-alias dts-gen dts-rm",
+    "dts-rm": "rimraf dist/types/origin",
+    "esbuild-lib-cjs": "FORMAT=cjs node .configs/esbuild.mjs",
+    "esbuild-lib-esm": "FORMAT=esm node .configs/esbuild.mjs",
+    "bundle-lib-pack": "run-p esbuild-lib-cjs esbuild-lib-esm dts-pack",
+    "bundle-lib": "run-s ctix bundle-lib-pack ctix-rm",
+    "bundle": "run-s clean bundle-lib",
+    "build": "pnpm run clean && tsc --incremental --project tsconfig.prod.json",
+    "lint": "eslint --cache .",
+    "lint-staged": "lint-staged",
+    "lnb": "concurrently  \"npm run lint\" \"npm run build\"",
+    "prettier": "prettier --write src/**/*.ts",
+    "pub": "pnpm run bundle && cross-env RELEASE_MODE=true pnpm publish --registry http://localhost:8901 --force",
+    "unpub": "pnpm unpublish $npm_package_name@$npm_package_version --registry http://localhost:8901",
+    "pub:prod": "pnpm run bundle && cross-env RELEASE_MODE=true pnpm publish --access=public",
+    "dd": "deps-diff md -d dev -d prod -d peer --title-list-type '*' --deps-list-type '*' --content-list-type '*'",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -23,9 +35,21 @@
   },
   "author": "ByungJoon Lee <imjuni+github@gmail.com>",
   "license": "MIT",
-  "main": "./dist/cjs/index.js",
-  "typings": "./dist/esm/index.d.ts",
-  "module": "./dist/esm/index.js",
+  "main": "dist/cjs/index.cjs",
+  "module": "dist/esm/index.,js",
+  "types": "dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "require": {
+        "default": "./dist/cjs/index.cjs",
+        "types": "./dist/types/index.d.ts"
+      },
+      "import": {
+        "default": "./dist/esm/index.mjs",
+        "types": "./dist/types/index.d.ts"
+      }
+    }
+  },
   "files": [
     "dist"
   ],
@@ -34,35 +58,51 @@
   },
   "homepage": "https://github.com/imjuni/my-node-fp#readme",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@tsconfig/node16": "^1.0.3",
-    "@types/node": "^18.7.14",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@tsconfig/node18": "^18.2.2",
+    "@types/node": "^18.15.3",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "@vitest/coverage-v8": "^1.3.0",
     "cross-env": "^7.0.3",
-    "ctix": "^1.3.4",
-    "eslint": "^8.23.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.6",
+    "ctix": "^2.3.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^48.1.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.6.1",
-    "prettier-eslint": "^15.0.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "read-pkg": "^5.2.0",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.79.0",
-    "rollup-plugin-sourcemaps": "^0.6.3",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-ts": "^3.0.2",
-    "ts-jest": "^28.0.8",
-    "ts-loader": "^9.3.1",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.8.2"
+    "rimraf": "^5.0.5",
+    "rollup": "^4.12.0",
+    "rollup-plugin-dts": "^6.1.0",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.8",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.3.3",
+    "vite-tsconfig-paths": "^4.3.1",
+    "vitest": "^1.3.0"
   },
   "dependencies": {
-    "my-easy-fp": "^0.14.0"
+    "my-easy-fp": "^0.22.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "cross-env NODE_ENV=production eslint --cache"
+    ],
+    "*.{js,jsx,ts,tsx},*.json,.{eslintrc.cjs,prettierrc}": [
+      "cross-env NODE_ENV=production prettier --ignore-path .eslintignore --parser json --write"
+    ]
   }
 }
