fix(deps): fix dependency version conflicts
* change package manager: npm > pnpm
* deps
  * dev
    * add deps-diff: 1.0.2
    * change @typescript-eslint/eslint-plugin: 7.0.1 > 6.21.0
    * change @typescript-eslint/parser: 7.0.1 > 6.21.0

--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "bundle-lib-pack": "run-p esbuild-lib-cjs esbuild-lib-esm dts-pack",
     "bundle-lib": "run-s ctix bundle-lib-pack ctix-rm",
     "bundle": "run-s clean bundle-lib",
-    "build": "pnpm run clean && tsc --incremental --project tsconfig.prod.json",
+    "build": "npm run clean && tsc --incremental --project tsconfig.prod.json",
     "lint": "eslint --cache .",
     "lint-staged": "lint-staged",
     "lnb": "concurrently  \"npm run lint\" \"npm run build\"",
     "prettier": "prettier --write src/**/*.ts",
-    "pub": "pnpm run bundle && cross-env RELEASE_MODE=true pnpm publish --registry http://localhost:8901 --force",
-    "unpub": "pnpm unpublish $npm_package_name@$npm_package_version --registry http://localhost:8901",
-    "pub:prod": "pnpm run bundle && cross-env RELEASE_MODE=true pnpm publish --access=public",
+    "pub": "npm run bundle && cross-env RELEASE_MODE=true npm publish --registry http://localhost:8901 --force",
+    "unpub": "npm unpublish $npm_package_name@$npm_package_version --registry http://localhost:8901",
+    "pub:prod": "npm run bundle && cross-env RELEASE_MODE=true npm publish --access=public",
     "dd": "deps-diff md -d dev -d prod -d peer --title-list-type '*' --deps-list-type '*' --content-list-type '*'",
     "prepare": "husky install"
   },
@@ -62,11 +62,12 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.15.3",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitest/coverage-v8": "^1.3.0",
     "cross-env": "^7.0.3",
     "ctix": "^2.3.0",
+    "deps-diff": "^1.0.2",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
