fix(ci): fix ci configuration

--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "bundle-lib-pack": "run-p esbuild-lib-cjs esbuild-lib-esm dts-pack",
     "bundle-lib": "run-s ctix bundle-lib-pack ctix-rm",
     "bundle": "run-s clean bundle-lib",
-    "build": "npm run clean && tsc --incremental --project tsconfig.prod.json",
+    "build": "pnpm run clean && tsc --incremental --project tsconfig.prod.json",
     "lint": "eslint --cache .",
     "lint-staged": "lint-staged",
-    "lnb": "concurrently  \"npm run lint\" \"npm run build\"",
+    "lnb": "concurrently  \"pnpm run lint\" \"pnpm run build\"",
     "prettier": "prettier --write src/**/*.ts",
-    "pub": "npm run bundle && cross-env RELEASE_MODE=true npm publish --registry http://localhost:8901 --force",
-    "unpub": "npm unpublish $npm_package_name@$npm_package_version --registry http://localhost:8901",
-    "pub:prod": "npm run bundle && cross-env RELEASE_MODE=true npm publish --access=public",
+    "pub": "pnpm run bundle && cross-env RELEASE_MODE=true pnpm publish --registry http://localhost:8901 --force",
+    "unpub": "pnpm unpublish $npm_package_name@$npm_package_version --registry http://localhost:8901",
+    "pub:prod": "pnpm run bundle && cross-env RELEASE_MODE=true pnpm publish --access=public",
     "dd": "deps-diff md -d dev -d prod -d peer --title-list-type '*' --deps-list-type '*' --content-list-type '*'",
     "prepare": "husky install"
   },
