--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,7 @@ jobs:
     - run: pnpm install
     - run: pnpm run build
     - run: pnpm run clean
-    - run: pnpm run test:ci
-    - run: pnpm run clean
+    - run: pnpm run test
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       env:
