--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "cross-env": "^7.0.3",
     "ctix": "^2.3.0",
     "deps-diff": "^1.0.2",
+    "esbuild": "^0.20.1",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
